src/css/projectspage.css
#projects {
	/* padding-top: 52px; before custom-nav */
	padding-top: 120px;
    /* margin-top: -52px; margin removed due to nav highlighting issue */
}
.projects-container {
	max-width: 100%;
	min-height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
}
.projects-subcontainer {
	width: auto;
	height: auto;
}
.projects-heading { text-align: center; padding-bottom: 10px; }
.projects-sub-container {
	max-width: 100%;
	min-height: 100%;
	text-decoration: none;
	display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
.projects {
	width: auto;
	display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
.project-instance {
	max-width: 90%;
	width: 100%;
	padding-top: 20px;
	/* position: relative;
	left: 5%; */
	overflow: hidden;
	display: grid;
	align-content: center;
	justify-content: center;
	grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
	/* grid-template-columns: auto auto; */
	/* grid-column-gap: 50px; */
}
.project-instance:nth-child(2n) .project-content-container {
	order: -1;
}
.project-content-container { max-width: 95%; width: 100% }
.project-content { width: 100%; }
.project-header {
	display: flex;
	align-items: center;
}
.project-description {
	white-space: pre-line;  
	vertical-align: bottom;
}
.link { text-decoration: none; }
.link:hover { text-decoration:underline; }
.project-header h3 { 
	display: inline;
	margin-right: 0.5rem;
}
.project-links {
	display: inline;
}
.project-links svg {
    position: relative;
    bottom: 2px;
}
.disabled-github-link {
	pointer-events: none;
	color: gray;
}
hr { 
	margin: 0.5rem 0;
	width: 90%;
}
.video {
	width: 100%;
}
.modal-close-btn, .x-close-btn {
	/* border: 1px solid #8240B7; */
	border: 1px solid #8240B7;
	color: black;
	background: none;
	font-weight: 500;
}
.modal-close-btn:hover, .x-close-btn:hover {
	color: #EEE;
	border: 1px solid #8240B7;
	background-color: #8240B7;
}
#modal-dark .modal-close-btn, #modal-dark .x-close-btn {
	border: 1px solid #8225FF;
	color: #EEE;
	background: none;
}
#modal-dark .modal-close-btn:hover, #modal-dark .x-close-btn:hover {
	color: black;
	background-color: #8225FF;
}
.project-img-container-mobile {
	display: none;
	padding-bottom: 10px;
}
.project-img-container-desktop {
	max-width: 95%;
	display: flex;
	align-items: center;
	justify-content: normal;
}
.project-img-container-mobile img {
	width: 100%;
	height: 400px;
	object-fit: cover;
	border: 1px solid black;
	border-radius: 15px;
}
.project-img-container-desktop img {
	max-width: 40rem;
	width: 100%;
	height: auto;
	object-fit: cover;
	border: 1px solid black;
	border-radius: 15px;
}
/* #dark .project-img-container img {
	border: none;
} */
@media only screen and (max-width: 576px) {
	#projects {
		/* padding-top: 60px; before custom nav */
		padding-top: 60px;
	}
	.project-header {
		flex-direction: column;
		align-items: start;
	}
	.project-img-container-mobile img {
		height: 200px;
	}
}
@media only screen and (max-width: 1024px) {
	.project-img-container-mobile {
		display: block;
	}
	.project-img-container-desktop {
		display: none;
	}
	.project-instance {
		display: flex;
	}
}

